--- a/todos.html
+++ b/todos.html
@@ -1,35 +1,35 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chapter 6</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <form id="login-form" class="hidden">
-        <input required maxlength="15" type="text" placeholder="What is your name?">
-        <input type="submit" value="Login">
-    </form>  
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="What is your name?"
+      />
+      <input type="submit" value="Login" />
+    </form>
     <h1 id="greeting" class="hidden"></h1>
 
     <form id="todo-form">
-        <input type="text" placeholder="Write a To do" required>
+      <input type="text" placeholder="Write a To do" required />
     </form>
 
-    <ul id="todo-list">
-        
-    </ul>
-
+    <ul id="todo-list"></ul>
 
     <h2 id="clock">00:00</h2>
 
     <div id="quote">
-        <span></span>
-        <span></span>
+      <span></span>
+      <span></span>
     </div>
 
     <script src="js/greetings.js"></script>
@@ -37,5 +37,6 @@
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
-</body>
+    <script src="js/weather.js"></script>
+  </body>
 </html>
