--- a/index.html
+++ b/index.html
@@ -8,33 +8,35 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <form id="login-form" class="hidden">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <input type="submit" value="Login" />
-    </form>
-    <h1 id="greeting" class="hidden"></h1>
+    <div class="content">
+      <h2 id="clock">00:00</h2>
 
-    <form id="todo-form">
-      <input type="text" placeholder="Write a To do" required />
-    </form>
+      <form id="login-form" class="hidden">
+        <input
+          required
+          maxlength="15"
+          type="text"
+          placeholder="What is your name?"
+        />
+        <input type="submit" value="Login" />
+      </form>
+      <h1 id="greeting" class="hidden"></h1>
 
-    <ul id="todo-list"></ul>
+      <form id="todo-form">
+        <input type="text" placeholder="Write a To do" required />
+      </form>
 
-    <h2 id="clock">00:00</h2>
+      <ul id="todo-list"></ul>
 
-    <div id="quote">
-      <span></span>
-      <span></span>
-    </div>
+      <div id="quote">
+        <span></span>
+        <span></span>
+      </div>
 
-    <div id="weather">
-      <span></span>
-      <span></span>
+      <div id="weather">
+        <span></span>
+        <span></span>
+      </div>
     </div>
 
     <script src="js/greetings.js"></script>
